Details
-
Bug
-
Resolution: Done
-
P4: Low
-
5.15.0
-
MSVC2019, MinGW 8.1.0
-
-
1a1a18b86c7fb2c4213be276268830f3b1524ac7 (qt/qttools/dev) e1c5282d9f97bc2068107d4625933c7fefb9f0cc (qt/qttools/5.15)
Description
Windeployqt doesn't deploy the openglrenderer plugin. Both MinGW and MSVC builds are affected.
This can be reproduced by building Qt 3D example qt3d/basicshapes-cpp and running windeployqt.
Attachments
Issue Links
- relates to
-
QTBUG-61151 Qt3D Render: modular renderers
-
- Closed
-
-
QTBUG-84576 Qt 3D windeployqt/macdeployqt do not deploy isolated renderers plugins
-
- Closed
-