windeployqt: Deploy Qt3D renderer plugins added in 5.15

Add the association of the plugin directory.

Fixes: QTBUG-84477
Task-number: QTBUG-61151
Change-Id: I00b48dfccdc88bead63180a948eb8bc08a7ffb32
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>
(cherry picked from commit 1a1a18b86c7fb2c4213be276268830f3b1524ac7)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>